# dashboard_v2

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: projection.py  reporting.py
dashboard/assets/: style.css
dashboard/data/: benchmarks.csv  colours.csv  distributions.csv  manual_prices.csv  portfolio_changes.csv  portfolio_changes_fallback.csv  prices.csv  universe.csv
dashboard/src/: reporting.py  simulation.py
