[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Oliver Burkhard <oliver.burkhard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly = "^5.24.1"
dash = "^2.18.2"
requests = "^2.32.3"
yfinance = "^0.2.51"
colour = "^0.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
